[workspace]
resolver = "2"

members = [
    "soroflare-wrangler",
    "soroflare-vm"
]

[workspace.package]
version = "0.9.2"

[workspace.dependencies]
soroban-spec-tools = { version = "0.9.4", git = "https://github.com/stellar/soroban-tools", rev = "9b75c00fd19c0baf379c84668d90bfe444734173"}
soroban-spec = { version = "0.9.2", git = "https://github.com/stellar/rs-soroban-sdk", rev = "bfddbc380e2b23c71069bd612b89177400437a80" }
soroban-ledger-snapshot = { version = "0.9.2", git = "https://github.com/stellar/rs-soroban-sdk", rev = "bfddbc380e2b23c71069bd612b89177400437a80" }
stellar-xdr = { version = "0.0.17", git = "https://github.com/stellar/rs-stellar-xdr", rev = "0f16673441898162c9996da6117be2280ef8fd84", default-features = false }
soroban-env-host = { version = "0.0.17", git = "https://github.com/stellar/rs-soroban-env", rev = "400d806387140553e4e685d232deb3a807ec0e36" }
stellar-strkey = "0.0.7"