[package]
name = "soroflare-vm"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
soroban-env-host = { workspace = true }
soroban-spec-tools = { workspace = true }
soroban-spec = { workspace = true }
soroban-ledger-snapshot = { workspace = true }
stellar-xdr = { workspace = true }
stellar-strkey = { workspace = true }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
sha2 = "0.10.6"
thiserror = "1.0.31"
itertools = "0.10.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
ethnum = "1.3.2"
regex = "1.6.0"
